
2009-06-10 tdb
 * Removed has_table from version checks and drop_table

2009-06-10 tdb
 * Added "get_static_dirs()" method to repository, fixes icon_url() not
    getting icons from the system directories

2009-06-10 tdb
 * Support long values in browse views by using the MD5 of the value,
    fixing #3482

2009-06-15 tdb
 * Refactoured XML importing to embed the translation inside objects/fields

2009-06-16 cjg
 * Converted Admin screen into several tabs.

2009-06-18 tdb
 * Set the parent of subobjects wherever possible to reduce DB retrievals

2009-06-24 tdb
 * Subject inputform component can now be used with singular values

2009-06-26 tdb
 * Revised internal URIs to be /id/[datasetid]/[objectid]
 * Extended Index Queue for initial support for scheduling any job

2009-06-29 tdb
 * Added UUID metafield type

2009-07-01 tdb
 * Fixed cloning of eprints/documents/files

2009-07-24 tdb
 * Added support for a "captcha" field to user registration
 * Allow NewEPrint screen to be used in the key_tools area

2009-07-27 tdb
 * Added "show_help" option to workflow component to disable collapsing

2009-07-29 tdb
 * Added dynamic javascript and CSS based on user logged in status

2009-08-11 tdb
 * Return NOT_FOUND if a request for a secure document doesn't exist

2009-08-12 tdb
 * Use "brief" citation to render title duplicate matches >5

2009-08-17 cjg
 * Added $session->get_conf() to improve readability of code.

2009-09-16 tdb
 * Fixed current_counter not being available to Oracle
 * Fixed erroneous attempt to set increment=0 in counter_minimum
 * Modified Import UI to allow a per-plugin/single/bulk workflow

2009-09-29 cjg
 * EPrints.pm methods for API.

2009-09-29 cjg
 * First half of Repository methods for API. Not yet merged Repository & Session.

2009-09-29 cjg
 * $eprints->repository now obeys disable option.

2009-09-30 tdb
 * More efficient methods for getting "owned" and "editable" eprints

2009-10-13 tdb
 * Replaced search code with search code v3 (pure SQL)
