@@ -8386,3 +8386,6 @@ EPRINTS-3.1-beta-2
 2009-10-13 tdb
  * Replaced search code with search code v3 (pure SQL)
 
+2009-10-21 tdb
+ * Refined UploadMethods so they can specify a position to appear at
+
